--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Poetry'
+- GITenberg
 title: Provocations
 url: http://www.gutenberg.org/ebooks/33855
